Switch to SQL Server and Host Frontend on API

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=examee"
+    "DefaultConnection": "Server=localhost,1433; Database=examee_db; User Id=SA; Password=Password@1; TrustServerCertificate=True"
   },
   "TokenKey": "Examee Token Key"
 }
