Updating to .NET Core 8.0

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433; Database=examee_db; User Id=SA; Password=Password@1; TrustServerCertificate=True"
   },
-  "TokenKey": "Examee Token Key"
+  "TokenKey": "Examee Token Key Must be longer because it provokes errors for f*ck sake"
 }
