GitHub Actions Fixes

--- a/.github/workflows/master_examee.yml
+++ b/.github/workflows/master_examee.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - examee
+name: Build and Deploy Examee
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: '20'
 
       - name: Install Angular CLI
         run: npm install -g @angular/cli@18
